1.initialize shopify api credential 2.called out api

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "osiset/laravel-shopify": "^17.1"
+        "osiset/laravel-shopify": "^17.1",
+        "signifly/laravel-shopify": "^1.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
